--- a/events.html
+++ b/events.html
@@ -58,6 +58,8 @@
         .event-description {
             color: #555;
         }
+
+        
     </style>
    
 </head>
@@ -94,7 +96,7 @@
             <div class="event-card">
                 <img src="SoftFest.jpg" alt="Event 1" class="event-image">
                 <h3><center>SOFTFEST</center></h3>
-                <p class="event-description"><a href="event1-details.html">Click to know more..</a></p>
+                <p class="event-description"><a href="#softfest-heading">Click to know more..</a></p>
             </div>
 
             <!-- Event 2 -->
@@ -112,6 +114,12 @@
 
             <!-- Add more events as needed -->
 
+        </div>
+       
+        <div style="background-color: rgb(95, 95, 88); padding: 10px;">
+            <marquee behavior="scroll" direction="right" scrollamount="10">
+                <h1 style="font-size: 36px;"><center>SOFTFEST</center></h1>
+            </marquee>
         </div>
     </div>
     <!-- End of Event Section -->
