--- a/events.html
+++ b/events.html
@@ -115,10 +115,17 @@
             <!-- Add more events as needed -->
 
         </div>
+        <br>
+        <br>
+        <br>
        
-        <div style="background-color: rgb(95, 95, 88); padding: 10px;">
+        <div class="event-title">Stay tuned for our upcoming events!</div>
+        <br>
+        <br>
+       
+        <div style="background-color: rgb(7, 7, 7); padding:0px; display:block; width:auto;">
             <marquee behavior="scroll" direction="right" scrollamount="10">
-                <h1 style="font-size: 36px;"><center>SOFTFEST</center></h1>
+                <h1 id="softfest-heading" style="font-size: 30px; color: #f8f8f8;">SOFTFEST</h1>
             </marquee>
         </div>
     </div>
