--- a/aboutus.html
+++ b/aboutus.html
@@ -94,7 +94,7 @@
                     <img src="https://avatars.githubusercontent.com/u/116092558?v=4" class="mem_pp">
                     <div class="mem_details">
                         <p class="mem_name">Vinod Warnakulasooriya</p>
-                        <p class="mem_title">Founder of team Kylix | Undergraduate</p>
+                        <p class="mem_title">Starter of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
                             <div onclick="window.open('https://www.facebook.com', '_blank');"
