--- a/aboutus.html
+++ b/aboutus.html
@@ -112,11 +112,11 @@
                 <!--Team member 02-->
                 <div class="member">
                     <!--Change your PP here--->
-                    <img src="https://lh3.googleusercontent.com/nQoqkJdwxQMxFeA9bcSS6xzCLkliYmd_-0SUwtiNobA8RknKCFTMQsZFyOQvbmfAnNroy2MuwzJKSWS6nUIv8UYgIMRgiP4Qm6r2wok=s120"
+                    <img src="https://avatars.githubusercontent.com/u/116260105?v=4"
                         class="mem_pp">
                     <div class="mem_details">
-                        <p class="mem_name">Vinod Warnakulasooriya</p>
-                        <p class="mem_title">test</p>
+                        <p class="mem_name">Ishfa Ishak</p>
+                        <p class="mem_title">Founder of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
                             <div onclick="window.open('https://www.facebook.com', '_blank');"
@@ -137,7 +137,7 @@
                     <img src="https://lh3.googleusercontent.com/nQoqkJdwxQMxFeA9bcSS6xzCLkliYmd_-0SUwtiNobA8RknKCFTMQsZFyOQvbmfAnNroy2MuwzJKSWS6nUIv8UYgIMRgiP4Qm6r2wok=s120"
                         class="mem_pp">
                     <div class="mem_details">
-                        <p class="mem_name">Vinod Warnakulasooriya</p>
+                        <p class="mem_name">Kanzul Nuha</p>
                         <p class="mem_title">Founder of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
@@ -156,10 +156,10 @@
                 <!--Team member 04-->
                 <div class="member">
                     <!--Change your PP here--->
-                    <img src="https://lh3.googleusercontent.com/nQoqkJdwxQMxFeA9bcSS6xzCLkliYmd_-0SUwtiNobA8RknKCFTMQsZFyOQvbmfAnNroy2MuwzJKSWS6nUIv8UYgIMRgiP4Qm6r2wok=s120"
+                    <img src="https://avatars.githubusercontent.com/u/119842704?v=4"
                         class="mem_pp">
                     <div class="mem_details">
-                        <p class="mem_name">Vinod Warnakulasooriya</p>
+                        <p class="mem_name">Shamra Faizal</p>
                         <p class="mem_title">Starter of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
@@ -181,7 +181,7 @@
                     <img src="https://lh3.googleusercontent.com/nQoqkJdwxQMxFeA9bcSS6xzCLkliYmd_-0SUwtiNobA8RknKCFTMQsZFyOQvbmfAnNroy2MuwzJKSWS6nUIv8UYgIMRgiP4Qm6r2wok=s120"
                         class="mem_pp">
                     <div class="mem_details">
-                        <p class="mem_name">Vinod Warnakulasooriya</p>
+                        <p class="mem_name">Oshada Rathnasiri</p>
                         <p class="mem_title">Founder of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
@@ -200,10 +200,10 @@
                 <!--Team member 06-->
                 <div class="member">
                     <!--Change your PP here--->
-                    <img src="https://lh3.googleusercontent.com/nQoqkJdwxQMxFeA9bcSS6xzCLkliYmd_-0SUwtiNobA8RknKCFTMQsZFyOQvbmfAnNroy2MuwzJKSWS6nUIv8UYgIMRgiP4Qm6r2wok=s120"
+                    <img src="https://avatars.githubusercontent.com/u/116559859?v=4"
                         class="mem_pp">
                     <div class="mem_details">
-                        <p class="mem_name">Vinod Warnakulasooriya</p>
+                        <p class="mem_name">Vidura Abeysinghe</p>
                         <p class="mem_title">Founder of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
