--- a/aboutus.html
+++ b/aboutus.html
@@ -200,6 +200,28 @@
                 <!--Team member 06-->
                 <div class="member">
                     <!--Change your PP here--->
+                    <img src="https://avatars.githubusercontent.com/u/107571029?v=4"
+                        class="mem_pp">
+                    <div class="mem_details">
+                        <p class="mem_name">Hafsa Sindikar</p>
+                        <p class="mem_title">Founder of team Kylix | Undergraduate</p>
+                        <div class="mem_socials">
+                            <!--Change ur socials here-->
+                            <div onclick="window.open('https://www.facebook.com/profile.php?id=100086929982474', '_blank');"
+                                class="fb_logo mem_soc_rec"></div>
+                            <div onclick="window.open('https://www.instagram.com/hafsazinthikar', '_blank');"
+                                class="insta_logo mem_soc_rec"></div>
+                            <div onclick="window.open('https://www.linkedin.com/in/hafsa-sindikar-8195532a0/', '_blank');"
+                                class="lkin_logo mem_soc_rec"></div>
+                            <div onclick="window.open('https://twitter.com/hafsasindikar', '_blank');"
+                                class="twt_logo mem_soc_rec"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--Team member 07-->
+                <div class="member">
+                    <!--Change your PP here--->
                     <img src="https://avatars.githubusercontent.com/u/116559859?v=4"
                         class="mem_pp">
                     <div class="mem_details">
