--- a/aboutus.html
+++ b/aboutus.html
@@ -94,7 +94,7 @@
                     <img src="https://avatars.githubusercontent.com/u/116092558?v=4" class="mem_pp">
                     <div class="mem_details">
                         <p class="mem_name">Vinod Warnakulasooriya</p>
-                        <p class="mem_title">Starter of team Kylix | Undergraduate</p>
+                        <p class="mem_title">Founder & Developer of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
                             <div onclick="window.open('https://www.facebook.com', '_blank');"
@@ -116,7 +116,7 @@
                         class="mem_pp">
                     <div class="mem_details">
                         <p class="mem_name">Ishfa Ishak</p>
-                        <p class="mem_title">Founder of team Kylix | Undergraduate</p>
+                        <p class="mem_title">Developer of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
                             <div onclick="window.open('https://www.facebook.com', '_blank');"
@@ -138,7 +138,7 @@
                         class="mem_pp">
                     <div class="mem_details">
                         <p class="mem_name">Kanzul Nuha</p>
-                        <p class="mem_title">Founder of team Kylix | Undergraduate</p>
+                        <p class="mem_title">Developer of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
                             <div onclick="window.open('https://www.facebook.com', '_blank');"
@@ -160,12 +160,12 @@
                         class="mem_pp">
                     <div class="mem_details">
                         <p class="mem_name">Shamra Faizal</p>
-                        <p class="mem_title">Starter of team Kylix | Undergraduate</p>
+                        <p class="mem_title">Developer of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
                             <div onclick="window.open('https://www.facebook.com', '_blank');"
                                 class="fb_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.instagram.com', '_blank');"
+                            <div onclick="window.open('https://www.instagram.com/shamra__faizal', '_blank');"
                                 class="insta_logo mem_soc_rec"></div>
                             <div onclick="window.open('https://www.linkedin.com', '_blank');"
                                 class="lkin_logo mem_soc_rec"></div>
@@ -182,7 +182,7 @@
                         class="mem_pp">
                     <div class="mem_details">
                         <p class="mem_name">Oshada Rathnasiri</p>
-                        <p class="mem_title">Founder of team Kylix | Undergraduate</p>
+                        <p class="mem_title">Developer of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
                             <div onclick="window.open('https://www.facebook.com', '_blank');"
@@ -204,7 +204,7 @@
                         class="mem_pp">
                     <div class="mem_details">
                         <p class="mem_name">Hafsa Sindikar</p>
-                        <p class="mem_title">Founder of team Kylix | Undergraduate</p>
+                        <p class="mem_title">Developer of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
                             <div onclick="window.open('https://www.facebook.com/profile.php?id=100086929982474', '_blank');"
@@ -226,16 +226,14 @@
                         class="mem_pp">
                     <div class="mem_details">
                         <p class="mem_name">Vidura Abeysinghe</p>
-                        <p class="mem_title">Founder of team Kylix | Undergraduate</p>
+                        <p class="mem_title">Developer of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
-                            <div onclick="window.open('https://www.facebook.com', '_blank');"
-                                class="fb_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.instagram.com', '_blank');"
+                            <div onclick="window.open('https://www.instagram.com/vd___a', '_blank');"
                                 class="insta_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.linkedin.com', '_blank');"
+                            <div onclick="window.open('https://www.linkedin.com/in/viduraabeysinghe/', '_blank');"
                                 class="lkin_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.twitter.com', '_blank');"
+                            <div onclick="window.open('https://twitter.com/Vidura_13', '_blank');"
                                 class="twt_logo mem_soc_rec"></div>
                         </div>
                     </div>
