--- a/aboutus.html
+++ b/aboutus.html
@@ -31,6 +31,16 @@
             }, 2000);
 
         });
+
+        function biglogo(x){
+            x.style.height="32px";
+            x.style.width="32px";
+        }
+
+        function normallogo(x){
+            x.style.height="20px";
+            x.style.width="20px";
+        }
     </script>
 
 </head>
@@ -97,13 +107,13 @@
                         <p class="mem_title">Founder & Developer of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
-                            <div onclick="window.open('https://www.facebook.com', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.facebook.com', '_blank');"
                                 class="fb_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.instagram.com', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.instagram.com', '_blank');"
                                 class="insta_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.linkedin.com', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.linkedin.com', '_blank');"
                                 class="lkin_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.twitter.com', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.twitter.com', '_blank');"
                                 class="twt_logo mem_soc_rec"></div>
                         </div>
                     </div>
@@ -119,13 +129,13 @@
                         <p class="mem_title">Developer of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
-                            <div onclick="window.open('https://www.facebook.com', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.facebook.com', '_blank');"
                                 class="fb_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.instagram.com', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.instagram.com', '_blank');"
                                 class="insta_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.linkedin.com', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.linkedin.com', '_blank');"
                                 class="lkin_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.twitter.com', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.twitter.com', '_blank');"
                                 class="twt_logo mem_soc_rec"></div>
                         </div>
                     </div>
@@ -141,13 +151,13 @@
                         <p class="mem_title">Developer of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
-                            <div onclick="window.open('https://www.facebook.com', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.facebook.com', '_blank');"
                                 class="fb_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.instagram.com', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.instagram.com', '_blank');"
                                 class="insta_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.linkedin.com', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.linkedin.com', '_blank');"
                                 class="lkin_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.twitter.com', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.twitter.com', '_blank');"
                                 class="twt_logo mem_soc_rec"></div>
                         </div>
                     </div>
@@ -163,11 +173,11 @@
                         <p class="mem_title">Developer of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
-                            <div onclick="window.open('https://www.facebook.com', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.facebook.com', '_blank');"
                                 class="fb_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.instagram.com/shamra__faizal', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.instagram.com/shamra__faizal', '_blank');"
                                 class="insta_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.linkedin.com', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.linkedin.com', '_blank');"
                                 class="lkin_logo mem_soc_rec"></div>
                             <div onclick="window.open('https://www.twitter.com', '_blank');"
                                 class="twt_logo mem_soc_rec"></div>
@@ -185,11 +195,11 @@
                         <p class="mem_title">Developer of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
-                            <div onclick="window.open('https://www.facebook.com', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.facebook.com', '_blank');"
                                 class="fb_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.instagram.com', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.instagram.com', '_blank');"
                                 class="insta_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.linkedin.com', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.linkedin.com', '_blank');"
                                 class="lkin_logo mem_soc_rec"></div>
                             <div onclick="window.open('https://www.twitter.com', '_blank');"
                                 class="twt_logo mem_soc_rec"></div>
@@ -207,11 +217,11 @@
                         <p class="mem_title">Developer of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
-                            <div onclick="window.open('https://www.facebook.com/profile.php?id=100086929982474', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.facebook.com/profile.php?id=100086929982474', '_blank');"
                                 class="fb_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.instagram.com/hafsazinthikar', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.instagram.com/hafsazinthikar', '_blank');"
                                 class="insta_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.linkedin.com/in/hafsa-sindikar-8195532a0/', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.linkedin.com/in/hafsa-sindikar-8195532a0/', '_blank');"
                                 class="lkin_logo mem_soc_rec"></div>
                             <div onclick="window.open('https://twitter.com/hafsasindikar', '_blank');"
                                 class="twt_logo mem_soc_rec"></div>
@@ -229,11 +239,11 @@
                         <p class="mem_title">Developer of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
-                            <div onclick="window.open('https://www.instagram.com/vd___a', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.instagram.com/vd___a', '_blank');"
                                 class="insta_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.linkedin.com/in/viduraabeysinghe/', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.linkedin.com/in/viduraabeysinghe/', '_blank');"
                                 class="lkin_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://twitter.com/Vidura_13', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://twitter.com/Vidura_13', '_blank');"
                                 class="twt_logo mem_soc_rec"></div>
                         </div>
                     </div>
