--- a/aboutus.html
+++ b/aboutus.html
@@ -97,7 +97,7 @@
                         <p class="mem_title">Starter of team Kylix | Undergraduate</p>
                         <div class="mem_socials">
                             <!--Change ur socials here-->
-                            <div onclick="window.open('https://www.facebook.com', '_blank');"
+                            <div onclick="window.open('https://web.facebook.com/vinuwa.fb/', '_blank');"
                                 class="fb_logo mem_soc_rec"></div>
                             <div onclick="window.open('https://www.instagram.com', '_blank');"
                                 class="insta_logo mem_soc_rec"></div>
