--- a/aboutus.html
+++ b/aboutus.html
@@ -99,7 +99,7 @@
                             <!--Change ur socials here-->
                             <div onclick="window.open('https://web.facebook.com/vinuwa.fb/', '_blank');"
                                 class="fb_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.instagram.com', '_blank');"
+                            <div onclick="window.open('https://www.instagram.com/vinuwa.social/', '_blank');"
                                 class="insta_logo mem_soc_rec"></div>
                             <div onclick="window.open('https://www.linkedin.com', '_blank');"
                                 class="lkin_logo mem_soc_rec"></div>
