--- a/aboutus.html
+++ b/aboutus.html
@@ -101,7 +101,7 @@
                                 class="fb_logo mem_soc_rec"></div>
                             <div onclick="window.open('https://www.instagram.com/vinuwa.social/', '_blank');"
                                 class="insta_logo mem_soc_rec"></div>
-                            <div onclick="window.open('https://www.linkedin.com', '_blank');"
+                            <div onclick="window.open('https://www.linkedin.com/in/vinod-warnakulasooriya98', '_blank');"
                                 class="lkin_logo mem_soc_rec"></div>
                             <div onclick="window.open('https://www.twitter.com', '_blank');"
                                 class="twt_logo mem_soc_rec"></div>
