--- a/aboutus.html
+++ b/aboutus.html
@@ -131,9 +131,9 @@
                             <!--Change ur socials here-->
                             <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.facebook.com', '_blank');"
                                 class="fb_logo mem_soc_rec"></div>
-                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.instagram.com', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.instagram.com/ishfa_ishak?igsh=ZGUzMzM3NWJiOQ', '_blank');"
                                 class="insta_logo mem_soc_rec"></div>
-                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.linkedin.com', '_blank');"
+                            <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.linkedin.com/in/ishfa-ishak-a41073239', '_blank');"
                                 class="lkin_logo mem_soc_rec"></div>
                             <div onmouseover="biglogo(this)" onmouseout="normallogo(this)" onclick="window.open('https://www.twitter.com', '_blank');"
                                 class="twt_logo mem_soc_rec"></div>
