--- a/events.html
+++ b/events.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Events</title>
+    <title>Calculate</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <style>
@@ -56,18 +56,6 @@
         .event-description {
             color: #555;
         }
-
-        /* Additional Styles for the banner text */
-        .banner_text {
-            font-size: 24px;
-            font-weight: bold;
-            color: #fff;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: 1;
-        }
     </style>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
@@ -102,7 +90,7 @@
     </div>
     <div class="middle">
         General Inquiries: (+94) 011 2881 000 
-        Exams/Certificates: (+94) 11-2881461 | (+94) 11-2881040
+        Exams/Certificates: (+94) 11-2881461 | (+94) 11-2881040   
     </div>
 
     <header class="header">
@@ -124,7 +112,7 @@
             <div class="event-card">
                 <img src="SoftFest.jpg" alt="Event 1" class="event-image">
                 <h3><center>SOFTFEST</center></h3>
-                <p class="event-description"><a href="#softfest-heading">Click to know more..</a></p>
+                <p class="event-description"><a href="softfest.html">Click to know more..</a></p>
             </div>
 
             <!-- Event 2 -->
@@ -148,15 +136,6 @@
         <br>
        
         <div class="event-title">Stay tuned for our upcoming events!</div>
-        <br>
-        <br>
        
-        <div style="background-color: rgb(7, 7, 7); padding:0px; display:block; width:auto;">
-            <marquee behavior="scroll" direction="right" scrollamount="10">
-                <h1 id="softfest-heading" style="font-size: 30px; color: #f8f8f8;">SOFTFEST</h1>
-            </marquee>
-        </div>
-    </div>
     <!-- End of Event Section -->
 </body>
-</html>
