--- a/events.html
+++ b/events.html
@@ -12,7 +12,7 @@
     <style>
         /* Styles for the event section */
         .event-section {
-            background-color: #f8f8f8;
+            background-color: #f8f4f4;
             padding: 40px 20px;
             text-align: center;
         }
@@ -117,9 +117,9 @@
 
             <!-- Event 2 -->
             <div class="event-card">
-                <img src="event2.jpg" class="event-image">
+                <img src="art 1.jpg" class="event-image">
                 <h3><center>ART GALLERY</center></h3>
-                <p class="event-description"><a href="event1-details.html">Click to know more..</a></p>
+                <p class="event-description"><a href="art.html">Click to know more..</a></p>
             </div>
 
             <div class="event-card">
