--- a/article.html
+++ b/article.html
@@ -596,11 +596,10 @@
     <div id="engineering" class="course-description">
         <h2>Faculty of Engineering</h2>
         <p>
-        <p style="color: rgb(76, 76, 228);"> 1. What are the Study Programmes offered by the Faculty of Engineering
-            Technology?</p><br>
-
-        Study Programmes are made up of different course combinations for the award of a qualification through a
-        programme such as Advanced Certificate, Diploma,<br> Higher Diploma or Honours Degree;<br>
+        <p class="foeng_qu"> 1. What are the Study Programmes offered by the Faculty of Engineering Technology?</p>
+        <p class="foeng_answer">Study Programmes are made up of different course combinations for the award of a
+            qualification through a
+            programme such as Advanced Certificate, Diploma,<br> Higher Diploma or Honours Degree;</p><br>
 
         <p style="color: black;"><b>Bachelors Degree Programmes</b></p><br>
 
@@ -620,8 +619,7 @@
         Advanced Certificate in Apparel Technology<br><br>
 
 
-        <p style="color: rgb(76, 76, 228);"> 2. What are the specialisations in each degree programme?</p><br>
-
+        <p class="foeng_qu"> 2. What are the specialisations in each degree programme?</p><br>
         <p style="color: black;"><b> Bachelor of Technology Hounours in Engineering</b></p><br>
 
         Agricultural Engineering<br>
@@ -638,67 +636,73 @@
         Apparel production and management<br>
         Fashion design and product development<br>
         Textile manufacture<br><br>
-        <p style="color: rgb(76, 76, 228);">3. Are these programmes full time or part time?</p><br>
 
-        All programmes are full time and will be taught using open and distance learning mode.<br><br>
-        <p style="color: rgb(76, 76, 228);"> 4. Will I be an external student?</p><br>
+        <p class="foeng_qu">3. Are these programmes full time or part time?</p>
+        <p class="foeng_answer">All programmes are full time and will be taught using open and distance learning mode.
+        </p><br>
 
-        All Open University of Sri Lanka (OUSL) students are internal students. We provide comprehensive learner support
-        through study material, tutorial support and other <br>academic assistance to all our students.<br><br>
-        <p style="color: rgb(76, 76, 228);"> 5. Can I study while being employed?</p><br>
+        <p class="foeng_qu"> 4. Will I be an external student?</p>
+        <p class="foeng_answer">All Open University of Sri Lanka (OUSL) students are internal students. We provide
+            comprehensive learner support
+            through study material, tutorial support and other <br>academic assistance to all our students.</p><br>
 
-        Yes, our university has been established primarily to cater to adults and the employed.<br>
-        Flexible teaching-learning mode is particularly suited to those employed to achieve their higher educational
-        aspirations.<br>
-        Face-to-face teaching sessions are minimal. No regular lectures as in conventional universities.<br><br>
-        <p style="color: rgb(76, 76, 228);"> 6. When will applications be called for the Study Programmes?</p><br>
+        <p class="foeng_qu"> 5. Can I study while being employed?</p>
+        <p class="foeng_answer">Yes, our university has been established primarily to cater to adults and the
+            employed.<br>
+            Flexible teaching-learning mode is particularly suited to those employed to achieve their higher educational
+            aspirations.<br>
+            Face-to-face teaching sessions are minimal. No regular lectures as in conventional universities.</p><br>
 
-        Applications are called once every year through newspaper advertisements and university website.<br>
-        For Academic Year 2021/2022: Applications will be called soon.<br><br>
-        <p style="color: rgb(76, 76, 228);"> 7. How can I apply for a study programme?</p><br>
+        <p class="foeng_qu"> 6. When will applications be called for the Study Programmes?</p>
+        <p class="foeng_answer">Applications are called once every year through newspaper advertisements and university
+            website.<br>
+            For Academic Year 2021/2022: Applications will be called soon.</p><br>
 
-        Applications must be submitted ONLINE before the deadline, using the link in the OUSL webpage.<br>
-        International students should contact the International Relations Division. Email dirir@ou.ac.lk;
-        ird@ou.ac.lk.<br><br>
-        <p style="color: rgb(76, 76, 228);">8. What are the entry requirements for admission to a Study Programme?</p>
+        <p class="foeng_qu"> 7. How can I apply for a study programme?</p>
+        <p class="foeng_answer">Applications must be submitted ONLINE before the deadline, using the link in the OUSL
+            webpage.<br>
+            International students should contact the International Relations Division. Email dirir@ou.ac.lk;
+            ird@ou.ac.lk.</p><br>
+
+        <p class="foeng_qu">8. What are the entry requirements for admission to a Study Programme?</p>
+        <p class="foeng_answer">Please refer the latest Student Guidebook in the OUSL webpage.</p><br>
+
+        <p class="foeng_qu"> 9. Is there any possibility to follow any degree programme without G.C.E.
+            A/L qualification?</p>
+        <p class="foeng_answer">Yes. However, You need to follow relevant Advanced Certificate Programme (foundation
+            programme) recommended by
+            the Faculty before registering for the<br> programme.</p><br>
+
+        <p class="foeng_qu">10. How can I get more information about programmes?</p>
+        <p class="foeng_answer">You may download the Student Guidebook from the Faculty website.</p><br>
+
+        <p class="foeng_qu"> 11. Are there Selection Tests for study programmes?</p>
+        <p class="foeng_answer">There is a selection test ONLY for the Bachelor of Software Engineering programme.</p>
         <br>
 
-        Please refer the latest Student Guidebook in the OUSL webpage<br><br>
-        <p style="color: rgb(76, 76, 228);"> 9. Is there any possibility to follow any degree programme without G.C.E.
-            A/L qualification?</p><br>
+        <p class="foeng_qu"> 12. Is there any age limit to follow any prgramme?</p>
+        <p class="foeng_answer">Should be over 18 years</p><br>
 
-        Yes. However, You need to follow relevant Advanced Certificate Programme (foundation programme) recommended by
-        the Faculty before registering for the<br> programme.<br><br>
-        <p style="color: rgb(76, 76, 228);">10. How can I get more information about programmes?</p><br>
+        <p class="foeng_qu"> 13. How am I informed about the registration?</p>
+        <p class="foeng_answer">Students will be informed individually to register for the Programme on a specified date
+            by e-mail.</p><br>
 
-        You may download the Student Guidebook from the Faculty website<br><br>
-        <p style="color: rgb(76, 76, 228);"> 11. Are there Selection Tests for study programmes?</p><br>
+        <p class="foeng_qu"> 14. What are the documents that I should produce for the registration?</p>
+        <p class="foeng_answer">Educational qualifications, birth certificate, national Identity card (NIC)<br>
+            Two colour passport size photographs.</p><br>
 
-        There is a selection test ONLY for the Bachelor of Software Engineering programme.<br><br>
-        <p style="color: rgb(76, 76, 228);"> 12. Is there any age limit to follow any prgramme?</p><br>
+        <p class="foeng_qu">15. When will the registration take place?</p>
+        <p class="foeng_answer">Usually, one month after the closing date of the applications<br>
+            Must register on the date specified.</p><br>
 
-        Should be over 18 years<br><br>
-        <p style="color: rgb(76, 76, 228);"> 13. How am I informed about the registration?</p><br>
+        <p class="foeng_qu"> 16. Do I have to come in-person for the registration?</p>
+        <p class="foeng_answer">Yes, it is essential that you come yourself for registration as there may be
+            clarifications to make.<br>
+            In unavoidable circumstances you may send all relevant documents with copies through a nominated person with
+            a
+            letter of authorisation.</p><br>
 
-        Students will be informed individually to register for the Programme on a specified date by e-mail.<br><br>
-        <p style="color: rgb(76, 76, 228);"> 14. What are the documents that I should produce for the registration?</p>
-        <br>
-
-        Educational qualifications, birth certificate, national Identity card (NIC)<br>
-        Two colour passport size photographs<br><br>
-        <p style="color: rgb(76, 76, 228);">15. When will the registration take place?</p><br>
-
-        Usually, one month after the closing date of the applications<br>
-        Must register on the date specified.<br><br>
-        <p style="color: rgb(76, 76, 228);"> 16. Do I have to come in-person for the registration?</p><br>
-
-        Yes, it is essential that you come yourself for registration as there may be clarifications to make.<br>
-        In unavoidable circumstances you may send all relevant documents with copies through a nominated person with a
-        letter of authorisation.<br><br>
-        <p style="color: rgb(76, 76, 228);"> 17. How much will I have to pay?</p><br>
-
-
-
+        <p class="foeng_qu"> 17. How much will I have to pay?</p>
 
         <head>
             <meta charset="UTF-8">
@@ -779,55 +783,59 @@
 
 
 
-<p style="color: rgb(76, 76, 228);"> 18. Should I pay full amount at once during the registration?</p><br>
+<p class="foeng_qu"> 18. Should I pay full amount at once during the registration?</p>
+<p class="foeng_answer">Payment can be made in two or four installments per year.</p><br>
 
-Payment can be made in two or four installments per year.<br><br>
-<p style="color: rgb(76, 76, 228);">19. Will I be able to obtain a Mahapola or other Bursary awarded by the Open
-    University?</p><br>
+<p class="foeng_qu">19. Will I be able to obtain a Mahapola or other Bursary awarded by the Open
+    University?</p>
+<p class="foeng_answer">You are NOT entitled to Mahapola bursaries if employed.<br>
+    But you may be entitled to other bursaries awarded by the OUSL on merit/need basis.<br>
+    Student Guidebook and OUSL website provide information on bursaries.</p><br>
 
-You are NOT entitled to Mahapola bursaries if employed.<br>
-But you may be entitled to other bursaries awarded by the OUSL on merit/need basis.<br>
-Student Guidebook and OUSL website provide information on bursaries.<br><br>
-<p style="color: rgb(76, 76, 228);">20. Can I add/drop courses after registration?</p><br>
+<p class="foeng_qu">20. Can I add/drop courses after registration?</p>
+<p class="foeng_answer">Yes, the OUSL permits to add or drop courses during the ‘add/drop’ period, and to drop courses
+    on the ‘drop date’.<br>
+    Add/drop’ period and ‘drop date’ are informed through the Faculty webpage<br>
+    If you fail to drop a course during the ‘add/drop’ period but drop it subsequently, the fees applicable to that
+    course
+    will be forfeited. However, this will not have any <br>effects on the grades that you would get for this course
+    after a
+    subsequent registration.<br>
+    If you fail to drop a course even on the ‘drop date’, you are considered to have failed the course, and if you
+    register
+    again and follow the course the highest grade you <br>are entitled to is C grade.</p><br>
 
-Yes, the OUSL permits to add or drop courses during the ‘add/drop’ period, and to drop courses on the ‘drop date’.<br>
-Add/drop’ period and ‘drop date’ are informed through the Faculty webpage<br>
-If you fail to drop a course during the ‘add/drop’ period but drop it subsequently, the fees applicable to that course
-will be forfeited. However, this will not have any <br>effects on the grades that you would get for this course after a
-subsequent registration.<br>
-If you fail to drop a course even on the ‘drop date’, you are considered to have failed the course, and if you register
-again and follow the course the highest grade you <br>are entitled to is C grade.<br><br>
-<p style="color: rgb(76, 76, 228);"> 21. Can I withdraw from the programme after registration?</p><br>
+<p class="foeng_qu"> 21. Can I withdraw from the programme after registration?</p>
+<p class="foeng_answer">Yes, you can. If you withdraw from the programme before the ‘add/drop’ period, you are refunded
+    90% of the course
+    fees<br> paid. Otherwise, all the course fees paid will be forfeited.</p><br>
 
-Yes, you can. If you withdraw from the programme before the ‘add/drop’ period, you are refunded 90% of the course
-fees<br> paid. Otherwise, all the course fees paid will be forfeited.<br><br>
+<p class="foeng_qu">22. Can I get exemptions for prior qualifications?</p>
+<p class="foeng_answer">Yes, You may apply for specific exemptions from courses based on relevant prior
+    qualifications.<br>
+    Please refer Student Guidebook for exemptions approved by the Faculty.<br>
+    Applications can also be submitted for evaluation of other qualifications for exemptions. Application form can be
+    downloaded from Faculty webpage.</p><br>
 
-<p style="color: rgb(76, 76, 228);">22. Can I get exemptions for prior qualifications?</p><br>
+<p class="foeng_qu"> 23. Can I follow the Study Programme from any center?</p>
+<p class="foeng_answer">Most academic activities are conducted at Colombo Regional Centre.</p><br>
+However, Continuous Assessment Tests and Final Examinations are conducted at Regional centres.<br>
 
-Yes, You may apply for specific exemptions from courses based on relevant prior qualifications.<br>
-Please refer Student Guidebook for exemptions approved by the Faculty.<br>
-Applications can also be submitted for evaluation of other qualifications for exemptions. Application form can be
-downloaded from Faculty webpage.<br><br>
-<p style="color: rgb(76, 76, 228);"> 23. Can I follow the Study Programme from any center?</p><br>
+<p class="foeng_qu"> 24. What is the medium of Instruction?</p>
+<p class="foeng_answer">Medium of instruction is English.</p><br>
 
-Most academic activities are conducted at Colombo Regional Centre.<br>
-However, Continuous Assessment Tests and Final Examinations are conducted at Regional centres.<br><br>
-<p style="color: rgb(76, 76, 228);"> 24. What is the medium of Instruction?</p><br>
+<p class="foeng_qu">25. What is distance mode of teaching-learning?</p>
+<p class="foeng_answer">Can pursue learning in your own time and pace, irrespective of location, age or other
+    barriers.<br>
+    Face-to-face teaching sessions are minimal. Noregular lectures as in conventional universities.<br>
+    Learn via self-study course material in the form of written texts& audio/visual aids.<br>
+    Extensive support through online components.<br>
+    Day schools (discussions), tutorials and assignments facilitate learning. Day schools can be face-to-face or via web
+    conferencing (such as Zoom platform).<br>
+    Other teaching-learning activities include compulsory practical components, continuous assessments, and final
+    examinations.</p><br>
 
-Medium of instruction is English.<br><br>
-<p style="color: rgb(76, 76, 228);">25. What is distance mode of teaching-learning?</p><br>
-
-Can pursue learning in your own time and pace, irrespective of location, age or other barriers.<br>
-Face-to-face teaching sessions are minimal. Noregular lectures as in conventional universities.<br>
-Learn via self-study course material in the form of written texts& audio/visual aids.<br>
-Extensive support through online components.<br>
-Day schools (discussions), tutorials and assignments facilitate learning. Day schools can be face-to-face or via web
-conferencing (such as Zoom platform).<br>
-Other teaching-learning activities include compulsory practical components, continuous assessments, and final
-examinations.<br><br>
-<p style="color: rgb(76, 76, 228);">26. What is the duration of the Programme(s)?</p><br>
-
-
+<p class="foeng_qu">26. What is the duration of the Programme(s)?</p>
 
 <head>
     <meta charset="UTF-8">
@@ -913,39 +921,29 @@ examinations.<br><br>
 
 
 
+<p class="foeng_qu">27. What is a credit?</p>
+<p class="foeng_answer">A “Credit” is the academic value of an OUSL course.<br>
+    Time you will have to allocate for studying a course depends on its credit rating.<br>
+    One Credit = 50 notional learning hours.</p><br>
 
+<p class="foeng_qu"> 28. When will I be issued my course material?</p>
+<p class="foeng_answer">Course material will be issued during the registration in print/ soft copy format after the
+    registration.</p><br>
 
-<p style="color: rgb(76, 76, 228);">27. What is a credit?</p><br>
-A “Credit” is the academic value of an OUSL course.<br>
-Time you will have to allocate for studying a course depends on its credit rating.<br>
-One Credit = 50 notional learning hours.<br><br>
-<p style="color: rgb(76, 76, 228);"> 28. When will I be issued my course material?</p><br>
+<p class="foeng_qu"> 29. How can I obtain the activity diary?</p>
+<p class="foeng_answer">Activity Diary for the whole year will be displayed in Faculty webpage and the MyOUSL (the
+    online student portal) before
+    starting academic activities.</p><br>
 
-Course material will be issued during the registration in print/ soft copy format after the registration.<br><br>
-<p style="color: rgb(76, 76, 228);"> 29. How can I obtain the activity diary?</p><br>
-
-Activity Diary for the whole year will be displayed in Faculty webpage and the MyOUSL (the online student portal) before
-starting academic activities.<br><br>
-<p style="color: rgb(76, 76, 228);"> 30. How can I get further information and help?</p><br><br>
-
-Faculty Prospectus and Student Guidebook: These publications provide important information in more detail for
-prospective and registered students.<br>
-Orientation and counselling sessions: Provide advice on how to plan studies before registration to a Programme.<br>
-Contact staff: After registering students can meet academic staff in relevant department and get advice/ clarify doubts
-on academic related queries.<br>
-Contact relevant Head of Department:<br>
-
-
-
-
-
-
-
-
-
-
-
-</p>
+<p class="foeng_qu"> 30. How can I get further information and help?</p><br>
+<p class="foeng_answer">Faculty Prospectus and Student Guidebook: These publications provide important information in
+    more detail for
+    prospective and registered students.<br>
+    Orientation and counselling sessions: Provide advice on how to plan studies before registration to a Programme.<br>
+    Contact staff: After registering students can meet academic staff in relevant department and get advice/ clarify
+    doubts
+    on academic related queries.<br>
+    Contact relevant Head of Department:</p><br></p>
 </div>
 
 <div id="health-science" class="course-description">
