--- a/article.html
+++ b/article.html
@@ -10,6 +10,7 @@
     <title>Calculate</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <link rel="stylesheet" href="NativeStyle.css">
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             // Initial text
