--- a/Home.html
+++ b/Home.html
@@ -38,7 +38,7 @@
     
     <div class="top">
         <div class="banner">
-            <img src="Open sesame.png" alt="banner">
+            <img src="Source/Open sesame.png" alt="banner">
             <div class="banner_text">To know about your full payment</div>
         </div>
     </div>
