--- a/art.html
+++ b/art.html
@@ -119,8 +119,9 @@
     
     <div class="top">
         <div class="banner">
-            <img src="Open sesame.png" alt="banner">
-            <div class="banner_text">To know about your full payment</div>
+            <div class="banner">
+                <img src="Source/Open sesame.png" alt="banner">
+                <div class="banner_text">To know about your full payment</div>
         </div>
     </div>
     <div class="middle">
